# Domains/Context/BankAccountOperations/Infrastructure/Framework/DataAccess/Repositories/TransactionRepository.php
@@ -2,9 +2,11 @@
 
 namespace Domains\Context\BankAccountOperations\Infrastructure\Framework\DataAccess\Repositories;
 
+use Domains\Context\BankAccount\Domain\Model\Account\Balance;
 use Domains\Context\BankAccountOperations\Domain\Model\Transaction\ITransactionRepository;
 use Domains\Context\BankAccountOperations\Domain\Model\Transaction\Transaction;
 use Domains\Context\BankAccountOperations\Infrastructure\Framework\Entities\TransactionsModel;
+use Illuminate\Support\Facades\Log;
 
 final class TransactionRepository implements ITransactionRepository
 {
@@ -46,5 +48,12 @@ final class TransactionRepository implements ITransactionRepository
         $model = $this->transactionModel->find($transaction->getId());
         $model->approved = $transaction->getApproved();
         $model->save();
+    }
+
+    public function withdrawal(Transaction $transaction): void
+    {
+        $this->transactionModel->fill(['account_id' => $transaction->getAccountId(), 'balance' => $transaction->getBalance()->value, 'description' => $transaction->getDescription(), 'check_path_file' => $transaction->getCheckPathFile(), 'approved' => $transaction->getApproved()]);
+        $this->transactionModel->save();
+        $transaction->setId($this->transactionModel->id);
     }
 }
