# Domains/Context/BankAccountOperations/Infrastructure/Framework/Routes/api.php
@@ -6,4 +6,8 @@ Route::group(['prefix' => 'bankaccountoperations'], function () {
         Route::post('/', 'DepositController@create');
         Route::patch('/{id}/approve', 'DepositController@approve');
     });
+
+    Route::group(['prefix' => 'withdrawal'], function () {
+        Route::post('/', 'WithdrawalController@create');
+    });
 });
